feat: update pattern histogram

--- a/lpn/src/paper_figures.ipynb
+++ b/lpn/src/paper_figures.ipynb
@@ -1033,6 +1033,72 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "import seaborn as sns\n",
+    "\n",
+    "sns.set_style(\"ticks\")  # Clean style with axis ticks\n",
+    "sns.set_context(\"paper\", font_scale=1.5)  # Adjust font_scale as needed\n",
+    "# Option 1: colorblind friendly\n",
+    "# sns.set_palette(\"colorblind\")\n",
+    "# Option 2: deep colors that print well\n",
+    "sns.set_palette(\"deep\")\n",
+    "plt.rcParams.update({\n",
+    "    'font.family': 'serif',  # Use serif font\n",
+    "    'font.serif': ['Times New Roman'],  # Specifically Times New Roman\n",
+    "    'font.size': 10,  # Base font size\n",
+    "    'axes.labelsize': 10,  # Label size\n",
+    "    'axes.titlesize': 10,  # Title size\n",
+    "    'xtick.labelsize': 8,  # Tick label size\n",
+    "    'ytick.labelsize': 8,\n",
+    "    'legend.fontsize': 8,  # Legend font size\n",
+    "    'axes.spines.top': False,  # Remove top spine\n",
+    "    'axes.spines.right': False,  # Remove right spine\n",
+    "    'figure.dpi': 300,  # High DPI for quality\n",
+    "    'savefig.dpi': 300,  # High DPI for saving\n",
+    "    'figure.figsize': (3.5, 3.2),  # Common NeurIPS figure size (in inches)\n",
+    "    'axes.grid': False,  # Usually no grid for papers\n",
+    "    'legend.title_fontsize': 'small',  # Small title in legend\n",
+    "})\n",
+    "\n",
+    "# Data for plotting\n",
+    "training_runs = [\"Mean\", \"GA 1\", \"GA 1 (g)\", \"GA 5\", \"GA 5 (g)\", \"RS 5\", \"RS 25\"][::-1]\n",
+    "ga_100 = [67.5, 99.5, 94.1, 98.1, 95.1, 72.2, 87.9][::-1]\n",
+    "ga_100_ne = [32.5, 69.9, 65.4, 67.6, 76.6, 43.7, 60.6][::-1]\n",
+    "mean_data = [3.2, 8.6, 0.6, 0.0, 0.0, 6.1, 10.8][::-1]\n",
+    "\n",
+    "# Set up the plot\n",
+    "plt.figure()\n",
+    "\n",
+    "# Set positions for each bar on the y-axis\n",
+    "y_positions = np.arange(len(training_runs))\n",
+    "bar_width = 0.3\n",
+    "\n",
+    "# Plot GA 100, GA 100 (g), and Mean side by side\n",
+    "plt.barh(y_positions + bar_width, mean_data, height=bar_width, label=\"Encoder mean\")\n",
+    "plt.barh(y_positions, ga_100_ne, height=bar_width, label=\"GA 100\")\n",
+    "plt.barh(y_positions - bar_width, ga_100, height=bar_width, label=\"Encoder mean + GA 100\")\n",
+    "\n",
+    "plt.yticks(y_positions, training_runs)\n",
+    "plt.xlabel(\"Accuracy (%)\")\n",
+    "plt.ylabel(\"Training Method\")\n",
+    "\n",
+    "# Place the legend below the plot\n",
+    "plt.legend(title=\"Inference Method\", loc='upper center', bbox_to_anchor=(0.5, -0.25), ncol=3)\n",
+    "plt.title(\"Inference Ablation\")\n",
+    "\n",
+    "sns.despine()  # Remove top and right spines\n",
+    "plt.tight_layout()  # Adjust layout to prevent label clipping\n",
+    "plt.savefig('figures/pattern_histogram.pdf', bbox_inches='tight', transparent=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
