feat: update figure

--- a/lpn/src/paper_figures.ipynb
+++ b/lpn/src/paper_figures.ipynb
@@ -1062,7 +1062,7 @@
     "    'axes.spines.right': False,  # Remove right spine\n",
     "    'figure.dpi': 300,  # High DPI for quality\n",
     "    'savefig.dpi': 300,  # High DPI for saving\n",
-    "    'figure.figsize': (3.5, 3.2),  # Common NeurIPS figure size (in inches)\n",
+    "    'figure.figsize': (5.0, 2.5),  # Common NeurIPS figure size (in inches)\n",
     "    'axes.grid': False,  # Usually no grid for papers\n",
     "    'legend.title_fontsize': 'small',  # Small title in legend\n",
     "})\n",
@@ -1090,7 +1090,8 @@
     "plt.ylabel(\"Training Method\")\n",
     "\n",
     "# Place the legend below the plot\n",
-    "plt.legend(title=\"Inference Method\", loc='upper center', bbox_to_anchor=(0.5, -0.25), ncol=3)\n",
+    "# plt.legend(title=\"Inference Method\", loc='upper center', bbox_to_anchor=(0.5, -0.25), ncol=3)\n",
+    "plt.legend(title=\"Inference Method\", bbox_to_anchor=(1.05, 0.5), loc='center left')\n",
     "plt.title(\"Inference Ablation\")\n",
     "\n",
     "sns.despine()  # Remove top and right spines\n",
