update lpn import in lpn/src/paper_figures.ipynb

--- a/lpn/src/paper_figures.ipynb
+++ b/lpn/src/paper_figures.ipynb
@@ -9,8 +9,8 @@
     "import sys\n",
     "sys.path.append(\"..\")\n",
     "\n",
-    "from src.datasets.task_gen.task_generator import PatternTaskGenerator\n",
-    "from src.datasets.task_gen.utils import plot_task"
+    "from lpn.src.datasets.task_gen.task_generator import PatternTaskGenerator\n",
+    "from lpn.src.datasets.task_gen.utils import plot_task"
    ]
   },
   {
@@ -70,10 +70,10 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import ConnectionPatch\n",
     "\n",
-    "from src.models.lpn import LPN\n",
-    "from src.models.transformer import EncoderTransformer, DecoderTransformer\n",
-    "from src.visualization import arc_cmap, arc_norm\n",
-    "from src.datasets.task_gen.task_generator import PatternTaskGenerator"
+    "from lpn.src.models.lpn import LPN\n",
+    "from lpn.src.models.transformer import EncoderTransformer, DecoderTransformer\n",
+    "from lpn.src.visualization import arc_cmap, arc_norm\n",
+    "from lpn.src.datasets.task_gen.task_generator import PatternTaskGenerator"
    ]
   },
   {
